--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,5 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/VIA-app.war
+ - target/VIA-app/**/*
+   discard-paths: yes
