--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,5 +16,5 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
- - target/VIA-app/**/*
+ - target/VIA-app.war
    discard-paths: yes
